Fixed some inconsistancies and added some style:  - Modified the Heading One in the hours and contact page to align with    other pages.  - Added new classes to the Contact page and styled the page.

--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,31 @@ a:active {
 .about__trivia-answer {
     margin-top: 1em;
 }
+
+/* || CONTACT */
+.contact__h2 {
+    margin: 0;
+}
+.contact__fieldset {
+    border: none;
+}
+.contact__p {
+    margin: 1em 0;
+}
+.contact__label {
+    display: block;
+    font-weight: bold;
+}
+.contact__input,
+.contact__textarea {
+    padding: 0.5em;
+    border-radius: 15px;
+    border-width: 2px;
+    width: 100%;
+}
+.contact__button {
+    padding: 0.5em;
+    border-radius: 15px;
+    background: var(--HIGHLIGHT-COLOR);
+    color: var(--HEADER-COLOR);
+}
